Ajout du footer

--- a/scss/main.css
+++ b/scss/main.css
@@ -11969,4 +11969,20 @@ textarea.form-control-lg {
 .gradient-primary {
   background: linear-gradient(90deg, #3ca55c, #b5ac49);
   color: #fff;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+main {
+  margin-bottom: 150px;
+}
+
+footer.footer {
+  padding: 15px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
