mise en place du main

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -8,7 +8,7 @@ $secondary: #ecad0f;
 $dark: #304630;
 $black: #1f2d20;
 $font-family-sans-serif: "Roboto", sans-serif !default;
-$font-family-serif: "Poppins", serif !default;
+$font-family-serif: "Roboto Mono", serif !default;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
