--- a/scss/main.css
+++ b/scss/main.css
@@ -11976,13 +11976,62 @@ html {
   min-height: 100%;
 }
 
+.navbar {
+  padding: 15px;
+  font-size: 20px;
+}
+
 main {
   margin-bottom: 150px;
 }
 
 footer.footer {
   padding: 15px;
-  position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+p {
+  font-family: "Roboto Mono", serif;
+  font-size: 20px;
+}
+
+.full-page-bg {
+  background-image: url("/Assets/background-1.webp");
+  background-size: cover; /* Pour couvrir toute la page */
+  background-position: center; /* Centrer l'image */
+  background-repeat: no-repeat; /* Empêche la répétition */
+}
+
+.text-shadow-custom {
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.693);
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.search-container {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 50px;
+  padding: 10px;
+}
+
+.form-control {
+  border: none;
+  border-radius: 50px;
+  box-shadow: none;
+}
+
+.btn {
+  background-color: #8bc34a;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #7cb342;
 }/*# sourceMappingURL=main.css.map */
