--- a/scss/main.css
+++ b/scss/main.css
@@ -11985,7 +11985,7 @@ main {
   margin-bottom: 150px;
 }
 
-footer.footer {
+footer {
   padding: 15px;
   bottom: 0;
   width: 100%;
@@ -12029,6 +12029,7 @@ p {
   color: white;
   border: none;
   border-radius: 50px;
+  padding: 10px 20px;
   transition: background-color 0.3s ease;
 }
 
