--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,9 +16,8 @@ html {
 main {
   margin-bottom: 150px;
 }
-footer.footer {
+footer {
   padding: 15px;
-
   bottom: 0;
   width: 100%;
 }
@@ -56,6 +55,7 @@ p {
   color: white;
   border: none;
   border-radius: 50px;
+  padding: 10px 20px;
   transition: background-color 0.3s ease;
 }
 
