--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -2,13 +2,12 @@
 // Option A: Include all of Bootstrap
 
 // Include any default variable overrides here (though functions won't be available)
-
 $primary: #3ca55c;
-$secondary: #ecad0f;
+$secondary: #ffb700;
 $dark: #304630;
 $black: #1f2d20;
-$font-family-sans-serif: "Roboto", sans-serif !default;
-$font-family-serif: "Roboto Mono", serif !default;
+$gradient-primary: linear-gradient(90deg, #3ca55c, #b5ac49);
+$font-family-sans-serif: "Roboto", sans-serif;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
